# MarsRouter

./: README.md  README.rst  pyproject.toml
.github/workflows/: publish-on-release.yaml  python-upload.yml
src/marsrouter/: Router.py
