[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarsRouter"
version = "0.1.0"
description = "A simple dynamic routing system in Python."
long-description = """
MarsRouter is a lightweight and flexible dynamic routing system for Python.
It allows you to define URL patterns with dynamic segments and map them
to controller functions. The routing system matches incoming URLs to
the defined patterns, extracts dynamic parameters, and provides a simple
interface to handle requests based on these parameters.

Features:
- Dynamic URL pattern matching
- Simple function-based controllers
- Flexible parameter extraction
- Easy integration into existing Python projects

Usage:
1. Define your routing patterns and associated functions.
2. Use the router to match URLs and get the corresponding function and parameters.

Example:
    router = Router()
    router.add_route('/user/{username}', user_profile)
    result = router.dispatch('/user/john')
    # {'controller': user_profile, 'params': {'username': 'john'}}
"""

long-description-content-type = "text/x-rst"
authors = [
    {name = "Ahsan Ahmed", email = "ahsan.ahmed3246@gmail.com"}
]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
packages = ["marsrouter"]

[tool.setuptools.package-dir]
"" = "src"
