[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarsRouter"
version = "0.1.0"
description = "A simple dynamic routing system in Python."
long-description = file: README.rst
long-description-content-type = "text/x-rst"
authors = [
    {name = "Ahsan Ahmed", email = "ahsan.ahmed3246@gmail.com"}
]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
packages = ["marsrouter"]

[tool.setuptools.package-dir]
"" = "src"
